# SortNetSAT

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Extenders.xlsx  Prefixes.xlsx  PrefixesV2.xlsx  Timings.xlsx  VVariables.xlsx  build.sh  optsymprefixes18.txt  symprefixes18.txt  todo.md
src/: Assignment.cpp  Assignment.h  CMakeLists.txt  Expression.cpp  Expression.h  Expression2.cpp  Expression2.h  Extender.cpp  Extender.h  FormulaGenerator.cpp  FormulaGenerator.h  IncrementalExtender.cpp  IncrementalExtender.h  KosarajuSolver.cpp  KosarajuSolver.h  LayerDAG.cpp  LayerDAG.h  Network.cpp  Network.h  Pattern.cpp  Pattern.h  PrefixGeneratorV2.cpp  PrefixGeneratorV2.h  PrefixGeneratorV3.cpp  PrefixGraph.cpp  PrefixGraph.h  SimpleExtender.cpp  SimpleExtender.h  WindowMinimizer.cpp  WindowMinimizer.h  clause.cpp  clause.h  equivtest.cpp  main.cpp  minisatutil.cpp  minisatutil.h  prefixes.cpp  prefixes.h
src/OldPrefixes/: GraphvizSerializer.cpp  IsomorphicOutputSet.cpp  IsomorphicOutputSet.h  KosarajuSolver.h  LayerDAG.cpp  NetworkGraph.cpp  NetworkGraph.h  PrefixGeneratorV2.cpp  PrefixGeneratorV2.h  PrefixGeneratorV3.cpp  PrefixGeneratorV3.h  PrefixGraph.cpp  PrefixGraph.h
src/Prefixes/: GraphvizSerializer.cpp  GraphvizSerializer.h  IsomorphicOutputSet.cpp  IsomorphicOutputSet.h  IsomorphicOutputSetV2.cpp  IsomorphicOutputSetV2.h  KosarajuSolver.cpp  KosarajuSolver.h  LayerDAG.cpp  LayerDAG.h  NetworkGraph.cpp  NetworkGraph.h  NetworkSignature.cpp  NetworkSignature.h  OutputGraph.cpp  OutputGraph.h  OutputSet.cpp  OutputSet.h  PrefixDescriptor.cpp  PrefixDescriptor.h  PrefixGenerator.cpp  PrefixGenerator.h  PrefixGeneratorV2.cpp  PrefixGeneratorV3.cpp  PrefixGeneratorV3.h  PrefixGeneratorV4.cpp  PrefixGeneratorV4.h  PrefixGraph.cpp  PrefixGraph.h  SubsumptionSolver.cpp  SubsumptionSolver.h  WindowMinimizer.cpp  WindowMinimizer.h  prefixes.cpp  prefixes.h
